# rjgc_MoodStudyAI

./: .gitignore  README.md
backend/: .env.example  .gitignore  Cargo.toml
backend/config/: default.toml  development.toml  production.toml  test.toml
backend/migrations/: 202606060001_init_schema.sql  202606060002_add_business_constraints.sql  202606060003_seed_dev_data.sql  202606060004_add_stats_indexes.sql
backend/scripts/: init-db.ps1  start-redis.ps1
backend/src/: app.rs  config.rs  error.rs  lib.rs  main.rs  pagination.rs  response.rs  state.rs  storage.rs  validation.rs
backend/src/ai/: feedback.rs  mod.rs  prompt.rs  template.rs
backend/src/auth/: claims.rs  extractor.rs  jwt.rs  middleware.rs  mod.rs  password.rs  permission.rs
backend/src/cache/: login_lock.rs  mod.rs  redis.rs
backend/src/constants/: limits.rs  mod.rs  roles.rs  statuses.rs
backend/src/db/: health.rs  mod.rs  pool.rs  transaction.rs
backend/src/modules/: mod.rs
backend/src/modules/admin/: audit.rs  dto.rs  handler.rs  mod.rs  model.rs  repository.rs  routes.rs  service.rs
backend/src/modules/checkins/: dto.rs  handler.rs  mod.rs  model.rs  repository.rs  routes.rs  service.rs  streak.rs
backend/src/modules/emotions/: dto.rs  handler.rs  mod.rs  model.rs  repository.rs  routes.rs  service.rs  trend.rs
backend/src/routes/: api_v1.rs  health.rs  mod.rs
backend/src/storage/: avatar.rs  local.rs  mod.rs
backend/tests/: auth_api_test.rs  checkins_api_test.rs  emotions_api_test.rs  health_api_test.rs  rooms_api_test.rs  stats_api_test.rs  study_sessions_api_test.rs
(+99 files in other folders)
